--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="weather">
             <h2 class="city">Weather in Denver</h2>
             <h1 class="temp">51°</h1>
-            <img src="" alt="" class="icon" />
+            <img src="https://openweathermap.org/img/wn/02d.png" alt="" class="icon" />
             <div class="description">Cloudy</div>
             <div class="humidity">Humidity: 60%</div>
             <div class="wind">Wind speed: 6.2 km/hr</div>
