--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Weather App</title>
 </head>
 
@@ -24,7 +24,7 @@
                     </path>
                 </svg></button>
         </div>
-        <div class="weather">
+        <div class="weather loading">
             <h2 class="city">Weather in Denver</h2>
             <h1 class="temp">51°</h1>
             <img src="https://openweathermap.org/img/wn/02d.png" alt="" class="icon" />
@@ -32,6 +32,8 @@
             <div class="humidity">Humidity: 60%</div>
             <div class="wind">Wind speed: 6.2 km/hr</div>
         </div>
+
+        <button class="units">Change</button>
     </div>
 
 </body>
