--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </path>
                 </svg></button>
         </div>
-        <div class="weather loading">
+        <div class="weather">
             <h2 class="city">Weather in Denver</h2>
             <h1 class="temp">51°</h1>
             <img src="https://openweathermap.org/img/wn/02d.png" alt="" class="icon" />
